@@ -101,6 +101,13 @@ when there are none running.  If the timer daemon isn't running, there
 are no timers to cancel, and furthermore there is no need to start
 a clock-watcher.  So, it skips that step and exits sooner.
 
+ENVIRONMENT VARIABLES
+---------------------
+
+*NUT_DEBUG_LEVEL* sets default debug verbosity if no *-D* arguments
+were provided on command line, but does not request that the daemon
+runs in foreground mode.
+
 FILES
 -----
 
