@@ -900,6 +900,18 @@ int main(int argc, char **argv)
 		}
 	}
 
+	{ /* scoping */
+		char *s = getenv("NUT_DEBUG_LEVEL");
+		int l;
+		if (s && str_to_int(s, &l, 10)) {
+			if (l > 0 && nut_debug_level < 1) {
+				upslogx(LOG_INFO, "Defaulting debug verbosity to NUT_DEBUG_LEVEL=%d "
+					"since none was requested by command-line options", l);
+				nut_debug_level = l;
+			}	/* else follow -D settings */
+		}	/* else nothing to bother about */
+	}
+
 	argc -= optind;
 	argv += optind;
 
